--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
   </body>
 </html>
